// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contained button renders default contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-236 MuiButton-root-210 MuiButton-contained-221 MuiButton-raised-224"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-211"
    >
      Contained
    </span>
    <span
      class="MuiTouchRipple-root-239"
    />
  </button>
</div>
`;

exports[`contained button renders primary contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-273 MuiButton-root-247 MuiButton-contained-258 MuiButton-containedPrimary-259 MuiButton-raised-261 MuiButton-raisedPrimary-262"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-248"
    >
      Contained
    </span>
    <span
      class="MuiTouchRipple-root-276"
    />
  </button>
</div>
`;

exports[`contained button renders secondary contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-310 MuiButton-root-284 MuiButton-contained-295 MuiButton-containedSecondary-297 MuiButton-raised-298 MuiButton-raisedSecondary-300"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-285"
    >
      Contained
    </span>
    <span
      class="MuiTouchRipple-root-313"
    />
  </button>
</div>
`;

exports[`disabled button renders disabled version 1`] = `
<div>
  <button
    class="MuiButtonBase-root-65 MuiButtonBase-disabled-66 MuiButton-root-39 MuiButton-text-41 MuiButton-flat-44 MuiButton-disabled-59"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label-40"
    >
      Click me!
    </span>
  </button>
</div>
`;

exports[`flat button renders default flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-347 MuiButton-root-321 MuiButton-text-323 MuiButton-flat-326"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-322"
    >
      Flat
    </span>
    <span
      class="MuiTouchRipple-root-350"
    />
  </button>
</div>
`;

exports[`flat button renders primary flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-384 MuiButton-root-358 MuiButton-text-360 MuiButton-textPrimary-361 MuiButton-flat-363 MuiButton-flatPrimary-364"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-359"
    >
      Flat
    </span>
    <span
      class="MuiTouchRipple-root-387"
    />
  </button>
</div>
`;

exports[`flat button renders secondary flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-421 MuiButton-root-395 MuiButton-text-397 MuiButton-textSecondary-399 MuiButton-flat-400 MuiButton-flatSecondary-402"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-396"
    >
      Flat
    </span>
    <span
      class="MuiTouchRipple-root-424"
    />
  </button>
</div>
`;

exports[`outlined button renders default outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-125 MuiButton-root-99 MuiButton-outlined-107"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-100"
    >
      Outlined
    </span>
    <span
      class="MuiTouchRipple-root-128"
    />
  </button>
</div>
`;

exports[`outlined button renders primary outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-162 MuiButton-root-136 MuiButton-outlined-144 MuiButton-outlinedPrimary-145"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-137"
    >
      Outlined
    </span>
    <span
      class="MuiTouchRipple-root-165"
    />
  </button>
</div>
`;

exports[`outlined button renders secondary outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root-199 MuiButton-root-173 MuiButton-outlined-181 MuiButton-outlinedSecondary-183"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-174"
    >
      Outlined
    </span>
    <span
      class="MuiTouchRipple-root-202"
    />
  </button>
</div>
`;
